# freelance-marketplace-be

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  start_dev.sh
.github/workflows/: codeql.yml  main.yml  pylint.yml
alembic/: env.py
alembic/versions/: c50e6f2196a6_baseline.py  d26c12b89797_fix_missing_roles_table.py  df3a3a818ae8_initial_migration.py  ed7da1ad69ed_initial.py
freelance_marketplace/: main.py
freelance_marketplace/api/routes/: hello.py  scripts.py
freelance_marketplace/api/routes/auth/: auth.py
freelance_marketplace/api/routes/categories/: categories.py  categoriesLogic.py
freelance_marketplace/api/routes/conversations/: conversations.py  conversationsLogic.py
freelance_marketplace/api/routes/milestones/: milestones.py  milestonesLogic.py
freelance_marketplace/api/routes/notifications/: notifications.py
freelance_marketplace/api/routes/orders/: orders.py  ordersLogic.py
freelance_marketplace/api/services/: Authentication.py  authentication.py  cardano_submit_api.py  fileStorage.py  ogmios.py  redis.py  sockets.py  transaction_builder.py  transactions.py
freelance_marketplace/api/utils/: data_manipulation_utils.py  fileStorage.py  file_manipulation.py  file_manipulation_utils.py  redis.py  sql_util.py
freelance_marketplace/core/: config.py
freelance_marketplace/db/no_sql/: mongo.py
freelance_marketplace/db/sql/: database.py
freelance_marketplace/middleware/: access_token_validator.py  response_wrapper.py
freelance_marketplace/models/: sql_roles.py
freelance_marketplace/models/datums/: default_datum.py
freelance_marketplace/models/enums/: jobStatus.py  jobType.py  milestoneStatus.py  milestoneType.py  orderStatus.py  proposalStatus.py  requestStatus.py  serviceStatus.py  transaction_types.py  userRole.py  userType.py  walletType.py
freelance_marketplace/models/no_sql/: conversation.py  message.py  notification.py  portfolio.py  wishlist.py
freelance_marketplace/models/redeemers/: default_redeemer.py
freelance_marketplace/models/requests/: loginRequest.py
freelance_marketplace/models/seeds/: seed_roles.py
freelance_marketplace/models/sql/: sql_profiles.py  sql_roles.py  sql_skills.py  sql_tables.py  sql_users.py
(+39 files in other folders)
