[tool.poetry]
name = "freelance-marketplace-be"
version = "0.1.0"
description = ""
authors = ["QuaNilo <quanojo@gmail.com>"]
readme = "README.md"
license = "MIT"  # Optional, add if you have a license

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
pydantic-settings = ">=2.8.1,<3.0.0"
pydantic = ">=2.10.6,<3.0.0"
sqlalchemy = ">=2.0.39,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pycardano = ">=0.13.0,<0.14.0"
beanie = ">=1.29.0,<2.0.0"
pymongo = ">=4.11.3,<5.0.0"
alembic = {extras = ["async"], version = "^1.15.2"}
slowapi = "^0.1.9"
boto3 = "^1.37.31"
redis = "^5.2.1"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
# Add development dependencies here (if any, such as testing libraries)

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
